# AquiLLM

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.certbot  Dockerfile.ollama  Dockerfile.prod  Dockerfile.test  Dockerfile.vllm  README.md  docker-compose-development.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  validate_ollama_config.py
.cursor/rules/: rtk.mdc
.cursor/skills/aquillm-local-verification/: SKILL.md
.github/workflows/: hygiene-check.yml  pr-title.yml  release-please.yml  test-backend-frontend.yml
aquillm/apps/bug_reports/: activity.py  apps.py  capture.py  middleware.py  tasks.py  tracing.py  urls.py  ws_middleware.py
aquillm/apps/chat/: refs.py  routing.py  urls.py
aquillm/apps/collections/: apps.py  urls.py
aquillm/apps/core/: urls.py
aquillm/apps/documents/: apps.py  urls.py
aquillm/apps/ingestion/: apps.py  consumers.py  routing.py  urls.py
aquillm/apps/memory/: apps.py
aquillm/apps/notes/: apps.py  urls.py
aquillm/apps/platform_admin/: apps.py  urls.py
aquillm/apps/skills/: __init__.py  apps.py  urls.py
aquillm/aquillm/: __init__.py  adapters.py  admin.py  api_views.py  app_version.py  apps.py  asgi.py  celery.py  chunking.py  context_processors.py  crawl_status_consumers.py  crawler_tasks.py  demo_script.py  feedback_tasks.py  forms.py  llm.py  memory.py  message_adapters.py  metrics.py  models.py  observability.py  ocr_utils.py  routing.py  settings.py  settings_logging.py  settings_test.py  task_ingest_helpers.py  task_ingest_uploaded.py  tasks.py  urls.py  utils.py  version.py  views.py  vtt.py  zotero_client.py  zotero_oauth.py  zotero_sync_consumers.py  zotero_sync_helpers.py  zotero_tasks.py  zotero_views.py
aquillm/aquillm/ingestion/: __init__.py  media.py  parser_archive.py  parser_figures.py  parsers.py  types.py
aquillm/aquillm/llm_adaptors/: claude.py
aquillm/aquillm/migrations/: 0004_conversationfile.py  0005_alter_conversationfile_message_uuid.py  0006_pdfdocument_zotero_item_key_zoteroconnection.py  0007_remove_zoteroconnection_last_sync_version.py  0008_wsconversation_system_prompt_message.py  0009_migrate_json_to_messages.py  0010_remove_wsconversation_convo.py  0011_message_feedback_text.py  0012_feedbackexport.py  0012_remove_gemini_api_usage.py  0012_user_memory.py  0013_textchunk_content_trgm_idx.py  0014_textchunk_multimodal_fields.py  0015_unified_ingestion_status.py  (+4 more)
aquillm/chat/: consumers.py  tests.py  views.py
aquillm/ingest/: consumers.py  routing.py
aquillm/tests/: test_social_adapter_list_apps_dedupe.py  test_version.py
capstone_website/: .gitignore  README.md  __init__.py  index.html  problem.html  settings.py  styles.css  team.html  technologies.html  urls.py
capstone_website/css/: styles.css
capstone_website/main_app/: __init__.py  urls.py  views.py
deploy/compose/: base.yml  development.yml  no_gpu_dev.yml  observability.yml  production.yml  test.yml
deploy/nginx/: nginx.conf
deploy/scripts/: aquillm.service  genesis_vllm_entrypoint.sh  get_certs.sh  install.sh  migrate_docker_data_root.sh  parse_vllm_extra_args.py  relaunch_mem0_oss.sh  run.sh  start_dev.sh  start_mem0_local.sh  vllm_start.sh
deployment/: get_certs.sh  ollama_start.sh  run.sh  start_mem0_local.sh  vllm_start.sh
dev/: run.sh  run_host.sh
docs/: README.md
docs/architecture/: aquillm-current-architecture-mermaid.md
docs/changelog/: CHANGELOG-development-2026-03-26.md  README.md
docs/documents/: README.md
docs/plans/: 2026-03-16-auto-ingest-implementation-plan.md  2026-03-16-observability-design.md  2026-03-16-observability-implementation-plan.md
docs/roadmap/: README.md  roadmap-status.md
docs/specs/: 2026-03-16-auto-ingest-design.md  2026-03-17-unified-multiformat-ingestion-design.md  2026-03-18-codebase-refactor-design.md  2026-03-18-unified-document-figure-extraction-design.md  2026-03-19-kubernetes-support-services-deployment-scaling-design.md  2026-03-25-gcp-secret-management-design.md  2026-03-25-jenkins-pipeline-design.md  2026-03-25-research-source-connectors-design.md  2026-03-26-ingestion-work-queue-batching-design.md  2026-03-26-langgraph-mcp-tools-orchestration-design.md  2026-03-26-multi-backend-inference-deploy-strategy-design.md  2026-03-29-semantic-versioning-design.md  2026-03-30-adaptive-tool-call-budget-design.md  2026-03-30-mem0-async-memory-pipeline-design.md  2026-03-30-self-hosted-mem0-graph-memory-design.md  2026-03-30-whisperx-transcription-design.md  2026-03-31-mem0-graph-memory-quality-tuning-design.md  2026-03-31-mem0-graph-search-latency-design.md  2026-03-31-rag-citation-enforcement-design.md  2026-04-06-e2e-testing-design.md  README.md
e2e/: smoke.spec.ts
react/: package-lock.json  package.json  vite.config.notes.ts  vite.config.skills.ts  vite.config.ts  vitest.config.ts
react/src/: collection_notes_entry.tsx  main.tsx  skills_entry.tsx
react/tests/: collections.spec.ts  feedback-export.spec.ts
scripts/: check_file_lengths.py  check_hygiene.ps1  check_import_boundaries.py  check_logging_conventions.py
skills/caveman/: SKILL.md
skills/feedback/: SKILL.md
tests/: conftest.py
tests/unit/: test_message_adapters_django_to_pydantic.py  test_message_adapters_frontend_json.py  test_message_adapters_pydantic_to_django.py  test_message_adapters_roundtrip.py
(+709 files in other folders)
