[project]
name = "aquillm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.73.0",
    "astropy>=7.1.1",
    "beautifulsoup4>=4.14.2",
    "boto3>=1.40.74",
    "celery[redis]>=5.5.3",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "chardet>=5.2.0",
    "cohere>=5.20.0",
    "daphne>=4.2.1",
    "debugpy>=1.8.17",
    "django>=5.2.8",
    "django-allauth[socialaccount]>=65.13.0",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "django-storages[google,s3]>=1.14.6",
    "django-stubs>=5.2.7",
    "dotenv>=0.9.9",
    "google-genai>=1.50.1",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.5",
    "openai>=2.8.0",
    "pdf2image>=1.17.0",
    "pgvector>=0.4.1",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pypdf>=6.3.0",
    "pytesseract>=0.3.13",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.2.1",
    "requests-oauthlib>=2.0.0",
    "selenium>=4.0.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
    "typeguard>=4.4.4",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.0",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "mypy>=1.18.2",
    "ruff>=0.14.5",
]

[tool.ruff]
exclude = [
    ".venv",
    "aquillm/aquillm/migrations",
    "aquillm/chat/migrations",
    "aquillm/ingest/migrations",
]


[tool.ruff.lint]


# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"

[tool.ty.src]


[tool.mypy]
python_version = "3.12"  # Match your Python version
strict = "true"
exclude = [
    "migrations",
    "models\\.py$"
]
disable_error_code = ["no-untyped-call"]